# smbios-mdr

./: .gitignore  CMakeLists.txt  MAINTAINERS  OWNERS  README.md  groups  meson.build  meson.options  meson_options.txt  project.config
include/: cpu.hpp  cpuinfo.hpp  cpuinfo_utils.hpp  dimm.hpp  firmware_inventory.hpp  mdrv2.hpp  pciedevice.hpp  pcieslot.hpp  smbios.hpp  smbios_mdrv2.hpp  speed_select.hpp  system.hpp  system_boot.hpp  tpm.hpp
service_files/: meson.build  smbios-mdrv2.service  xyz.openbmc_project.cpuinfo.service
src/: cpu.cpp  cpuinfo_main.cpp  cpuinfo_utils.cpp  dimm.cpp  firmware_inventory.cpp  mdrv2.cpp  mdrv2_main.cpp  meson.build  pciedevice.cpp  pcieslot.cpp  speed_select.cpp  sst_mailbox.cpp  system.cpp  system_boot.cpp  tpm.cpp
src/smbios-grpc-blobs/: smbios_grpc.cpp  smbios_grpc.hpp
src/smbios-grpc-blobs/proto/: SmbiosTransfer.proto
src/smbios-ipmi-blobs/: handler.cpp  handler.hpp  main.cpp  meson.build
src/smbios-ipmi-blobs/test/: handler_commit_unittest.cpp  handler_open_unittest.cpp  handler_readwrite_unittest.cpp  handler_statclose_unittest.cpp  handler_unittest.cpp  handler_unittest.hpp  meson.build
subprojects/: libpeci.wrap  phosphor-host-ipmid.wrap  phosphor-ipmi-blobs.wrap
tools/: sst-compare-redfish-os.py  sst-info.sh
