option(
  'tests',
   type: 'feature',
   value: 'disabled',
   description: 'Build tests'
)

option(
  'dimm-dbus',
  type: 'feature',
  value: 'enabled',
  description: 'Expose DIMM D-Bus Interface'
)

option(
  'dimm-only-locator',
  type: 'feature',
  value: 'disabled',
  description: 'Only use the DIMM number, and not the bank'
)

option(
  'cpuinfo',
  type: 'feature',
  value: 'enabled',
  description: 'Build CPUInfo service'
)

option(
  'smbios-ipmi-blob',
  type: 'feature',
  value: 'enabled',
  description: 'Build IPMI blob library for SMBIOS transfer'
)

option(
  'use-device-locator-as-dimm-object-path',
  type: 'feature',
  value: 'disabled',
  description: 'SMBIOS creates DIMM Dbus objects as filepath dimmX. If this feature is enabled, then the deviceLocator index will be the X. If the feature is disabled, the order of dimm in SMBIOS table will be the X.'
)
