option('tests', type: 'feature', value: 'disabled', description: 'Build tests')

option(
    'dimm-dbus',
    type: 'feature',
    value: 'enabled',
    description: 'Expose DIMM D-Bus Interface',
)

option(
    'dimm-only-locator',
    type: 'feature',
    value: 'disabled',
    description: 'Only use the DIMM number, and not the bank',
)

option(
    'assoc-trim-path',
    type: 'feature',
    value: 'disabled',
    description: 'Trim one object path component from CPU and DIMM associations',
)

option(
    'cpuinfo',
    type: 'feature',
    value: 'enabled',
    description: 'Build CPUInfo service',
)

option(
  'slot-drive-presence',
  type: 'feature',
  value: 'disabled',
  description: 'Sets drive presence on slot objects'
)

option(
    'cpuinfo-peci',
    type: 'feature',
    value: 'enabled',
    description: 'Enable CPUInfo features that depend on PECI',
)

option(
    'smbios-ipmi-blob',
    type: 'feature',
    value: 'enabled',
    description: 'Build IPMI blob library for SMBIOS transfer',
)
